tests/samples/negative/core/main_with_param.ax
module main_with_param;

fn main(count: i32) -> i32 {
    return count;
}
